--- a/app/templates/postcode_search.html
+++ b/app/templates/postcode_search.html
@@ -1,5 +1,5 @@
 <h1>Search for a postcode</h1>
-    <form action="" method="post" novalidate>
+    <form test-id='postcode-search-form' action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
             {{ form.postcode.label }}<br>
